unpackaged/main/default/objects/SDOC__SDocsSettings__c/SDOC__SDocsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SDocsSettings</label>
</CustomObject>