unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Concurrent_Master_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Concurrent_Master_Wait_Time__c</fullName>
    <label>Concurrent Master Wait Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>