unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__ConnectedAppCertificateName__c.field-meta.xml
<CustomField>
    <fullName>SDOC__ConnectedAppCertificateName__c</fullName>
    <description>Name of the certificate Record you used to sign the SDocs connected App.
In the Connected App settings, under the API (Enable OAuth Settings) header a Digital Signature was uploaded. This corresponds the the name (Label) of the certificate record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the certificate Record you used to sign the SDocs connected App.
In the Connected App settings, under the API (Enable OAuth Settings) header a Digital Signature was uploaded. This corresponds the the name (Label) of the certificate record.</inlineHelpText>
    <label>ConnectedAppCertificateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>