unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__ConnectedAppTokenURL__c.field-meta.xml
<CustomField>
    <fullName>SDOC__ConnectedAppTokenURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ConnectedAppTokenURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>