unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__ConnectedAppUserName__c.field-meta.xml
<CustomField>
    <fullName>SDOC__ConnectedAppUserName__c</fullName>
    <description>Optional - only if you want the the process to run under a specific user. If a userName is not provided in the call, then this user will be used.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Optional - only if you want the the process to run under a specific user. If a userName is not provided in the call, then this user will be used.</inlineHelpText>
    <label>ConnectedAppUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>