unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Disable_Contact_Record_Queries_For_Email__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Disable_Contact_Record_Queries_For_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Contact Record Queries For Email</label>
    <type>Checkbox</type>
</CustomField>