unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Keep_Span_Tags_When_Using_Job_Splitters__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Keep_Span_Tags_When_Using_Job_Splitters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field previously was &quot;Keep Span Tags When Using Job Splitters&quot; and was deprecated in version 4.217</description>
    <inlineHelpText>This field previously was &quot;Keep Span Tags When Using Job Splitters&quot; and was deprecated in version 4.217</inlineHelpText>
    <label>(Deprecated Setting)</label>
    <type>Checkbox</type>
</CustomField>