unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Process_Job_Splitters_Concurrently__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Process_Job_Splitters_Concurrently__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Job Splitters Concurrently</label>
    <type>Checkbox</type>
</CustomField>