unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Salesforce_Home_URL__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Salesforce_Home_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Home URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>