unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__SD_Jobs_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SD_Jobs_Batch_Size__c</fullName>
    <description>Recommended batch size is 30.</description>
    <inlineHelpText>Recommended batch size is 30.</inlineHelpText>
    <label>SD Jobs Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>