unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__SD_Jobs_Fail_If_Template_Error__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SD_Jobs_Fail_If_Template_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SD Jobs Fail If Template Error</label>
    <type>Checkbox</type>
</CustomField>