unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__SD_Jobs_Top_of_Queue__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SD_Jobs_Top_of_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Global Setting will move all S-Docs Batch jobs to top of queue ahead of any other asynchronous jobs (eg Batch Jobs, Future Callouts etc)</description>
    <inlineHelpText>Global Setting will move all S-Docs Batch jobs to top of queue ahead of any other asynchronous jobs (eg Batch Jobs, Future Callouts etc)</inlineHelpText>
    <label>SD Jobs Move to Top of Flex Queue</label>
    <type>Checkbox</type>
</CustomField>