unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__SDTemplateEditor_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDTemplateEditor_Page_Size__c</fullName>
    <description>This changes how many fields are displayed in the field picker for the Insert Field, Insert Related List, and Insert RENDER wizards on the SDTemplateEditor page</description>
    <inlineHelpText>This changes how many fields are displayed in the field picker for the Insert Field, Insert Related List, and Insert RENDER wizards on the SDTemplateEditor page</inlineHelpText>
    <label>SDTemplateEditor Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>