unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Use_File_Id_For_AWS_Folders__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Use_File_Id_For_AWS_Folders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use File Id For AWS Folders</label>
    <type>Checkbox</type>
</CustomField>